--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
     padding: 0;
     margin: 0;
     max-width: 100%;
-    border: 1px solid grey;
+ /*   border: 1px solid grey;*/
 }
 html {
     font-size: 62.5%
@@ -87,8 +87,20 @@ h1 {
     width:100%;
 }
 #main_content p {
-    background-color:#DDB9A3;
     line-height:1.3em;
-    color:white;
 
+}
+.img_one img {
+    width:20%;
+}
+.img_two img {
+    width:20%;
+}
+.content p{
+    background-color:#DDB9A3;
+    color:white;
+}
+.more_content p {
+    margin-left: 33%;
+    margin-right: 33%;
 }
