--- a/index.css
+++ b/index.css
@@ -95,10 +95,10 @@ h1 {
 
 }
 .img_one img {
-    width:20%;
+    width:15%;
 }
 .img_two img {
-    width:20%;
+    width:15%;
 }
 .content p{
     background-color:#DDB9A3;
@@ -114,4 +114,8 @@ h1 {
 }
 p {
     margin-bottom:2%;
+
+}
+img_two p {
+    margin-bottom:10%;
 }
